--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,22 @@
 /target
+/lib
 /classes
 /checkouts
+/out
+/repl
+.DS_Store
+.nrepl-port
+*.iml
+*.js
 pom.xml
 pom.xml.asc
 *.jar
 *.class
-/.idea
-/.lein-*
-/.nrepl-port
+*.iml
+*.xml
+.idea
+.lein-deps-sum
+.lein-failures
+.lein-plugins
+.lein-repl-history
+
